--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start" : "node src/server.js"
+    "start" : "node src/server.js",
+    "build": "echo 'No build step needed for backend'"
   },
   "keywords": [],
   "author": "",
